# fine-tune-llma

./: Makefile  README.md  julia-install.ipynb  llama2-finetune.ipynb  pyproject.toml  test.py
validation/: backfill.py  hrd_reports.csv  hrd_reports.sql  test.py
validation/common/: http_client.py  utils.py
validation/gw_loh/: gw_loh.R
validation/v2/intra_inter_assay/: normalize_abundance.py
